workday/13.0/modules/ROOT/pages/index.adoc
= Workday Connector 13.0 - Mule 4
:page-aliases: connectors::workday/workday-about.adoc, connectors::workday/workday-connector.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Anypoint Connector for Workday (Workday Connector) provides access to standard Workday operations. Workday is a Software-as-a-Service (SaaS) solution developed by Workday, Inc.
Workday provides a set of software apps for financial and human capital management, such as human resources, staffing, recruiting, and performance.

Workday Connector provides operations that you can use to perform tasks for educational organizations, human resources, professional services, payroll, and benefits administration.

For compatibility information and fixed issues, see the Workday Connector release notes.

== Prerequisites

To use this connector, you must be familiar with:

* The Workday API
* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* Creating a Mule app using Anypoint Studio (Studio)

Before creating an app, you must have access to:

* The Workday target resource
* Anypoint Studio version 4.1.1 or later

== Audience

* New users, read:
** xref:workday-connector-design-center.adoc[Use Flow Designer to Configure Workday Connector]
** xref:workday-connector-studio.adoc[Use Studio to Configure Workday Connector]
** xref:workday-connector-examples.adoc[Examples], which provide one or more use cases for the connector
* Advanced users, read:
** xref:workday-connector-xml-maven.adoc[XML and Maven Support]
** xref:workday-connector-examples.adoc[Examples], which provide one or more use cases for the connector

For a major or minor release, see
xref:workday-connector-upgrade-migrate.adoc[Upgrade to Workday Connector 13.x].


== Common Use Case for the Connector

Use Workday Connector to start any of Workday's standard operations, such as creating a position request in Workday or adding a fund to a financial management service.

== Exchange Templates and Examples

https://www.mulesoft.com/exchange/[Anypoint Exchange] provides templates
that you can use as starting points for your apps and examples that illustrate a complete solution.

* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker-bidirectional-sync[Workday and ServiceNow Worker Bidirectional Sync]
* https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2wday-user-bidirectional-sync[Salesforce and Workday Bidirectional Sync]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-workerservicerequest-migration[Workday Worker to ServiceNow Service Request Migration]
* https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sfdc-worker-migration[Salesforce to Workday Financials Account - Customer Migration]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-employee-aggregation[Workday and ServiceNow Employee Aggregation]
* https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sfdc-worker-aggregation[Workday and Salesforce Worker Aggregation]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker-migration[Workday to ServiceNow Service Worker Migration]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker2servicerequest-broadcast[Workday Worker to ServiceNow Service Request Broadcast]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker2user-broadcast[Workday Worker to ServiceNow User Broadcast]
* https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sfdc-workercase-broadcast[Workday to Salesforce Worker Case Broadcast]

== Next Step

After you complete the prerequisites and try the templates and examples, you are ready to create your own app and configure the connector using xref:workday-connector-studio.adoc[Anypoint Studio] or xref:workday-connector-design-center.adoc[Flow Designer].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* https://help.mulesoft.com[MuleSoft Help Center]
