workday/15.0/modules/ROOT/pages/index.adoc
= Workday Connector 15.0 - Mule 4
:page-aliases: connectors::workday/workday-about.adoc, connectors::workday/workday-connector.adoc



Anypoint Connector for Workday (Workday Connector) provides access to standard Workday operations. Workday is a Software-as-a-Service (SaaS) solution developed by Workday, Inc.
Workday provides a set of software apps for financial and human capital management, such as human resources, staffing, recruiting, and performance.

Workday Connector provides operations that you can use to perform tasks for educational organizations, human resources, professional services, payroll, and benefits administration.

For compatibility information and fixed issues, see the Workday Connector release notes.

== Before You Begin

To use this connector, you must be familiar with:

* The Workday API
* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* Creating a Mule app using Anypoint Studio (Studio)

Before creating an app, you must have access to:

* The Workday target resource
* Anypoint Studio version 4.1.1 or later

== Common Use Cases for the Connector

Common use cases for Workday Connector include:

* *Accelerated Recruitment*
+
Integrate data from applications that handle scheduling, applicant screening, candidate debriefing, and so on, to accelerate the recruitment process.

* *Automated Employee Onboarding and Offboarding*
+
Provide an efficient and seamless experience for your new employees by simplifying onboarding and offboarding employees, from payroll to benefit enrollment to directory services governing identity and access, by obtaining a real-time view into multiple systems.

* *People Analytics*
+
Integrate Workday with several enterprise systems to run analytics and garner insights about employees to drive strategic decision-making around talent acquisition and retention, compensation, learning, workforce planning and development, and so on.

* *Streamlined Financials*
+
Use Workday’s financial modules to compensate employees, account for expenses and commissions in real-time, and automate critical sales processes like quote-to-cash by integrating Workday with ERP systems, such as SAP, NetSuite, and so on.

For examples of these use cases, refer to xref:workday-connector-examples.adoc[Workday Connector Examples].

== Exchange Templates and Examples

https://www.mulesoft.com/exchange/[Anypoint Exchange] provides templates
that you can use as starting points for your apps and examples that illustrate a complete solution.

* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker-bidirectional-sync[Workday and ServiceNow Worker Bidirectional Sync]
* https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2wday-user-bidirectional-sync[Salesforce and Workday Bidirectional Sync]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-workerservicerequest-migration[Workday Worker to ServiceNow Service Request Migration]
* https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sfdc-worker-migration[Salesforce to Workday Financials Account - Customer Migration]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-employee-aggregation[Workday and ServiceNow Employee Aggregation]
* https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sfdc-worker-aggregation[Workday and Salesforce Worker Aggregation]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker-migration[Workday to ServiceNow Service Worker Migration]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker2servicerequest-broadcast[Workday Worker to ServiceNow Service Request Broadcast]
* https://anypoint.mulesoft.com/exchange/org.mule.templates/template-wday2snow-worker2user-broadcast[Workday Worker to ServiceNow User Broadcast]
* https://www.mulesoft.com/exchange/org.mule.templates/template-wday2sfdc-workercase-broadcast[Workday to Salesforce Worker Case Broadcast]

== Next Step

After you complete the prerequisites and try the templates and examples, you are ready to create your own app and configure the connector using xref:workday-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* https://help.mulesoft.com[MuleSoft Help Center]
